finish up to step 4, now I ownly have to style the page

--- a/css/stories.css
+++ b/css/stories.css
@@ -37,3 +37,16 @@
 .story-user {
   display: block;
 }
+
+#my-stories-list{
+  list-style-type: none;
+}
+.delete-btn{
+  padding-right: 1rem;
+}
+.star{
+  padding-right:.1rem;
+}
+li {
+  padding: .3rem;
+}
