--- a/css/stories.css
+++ b/css/stories.css
@@ -22,7 +22,7 @@
 .story-link {
   color: black;
   font-size: 0.85rem;
-  font-weight: normal;
+  font-weight: 550;
   margin: 18px 0;
 }
 
@@ -72,4 +72,7 @@ li {
 hr{
 max-width: 800px;
 border-color: rgba(128, 128, 128, 0.064);
+}
+i{
+  color: gray;
 }
